%% Database Erd
%% Generated by UMLFlow from the source code. Do not edit: this file is a mirror of
%% .umlflow/diagrams/database-erd.md and is overwritten on every `umlflow update`.
erDiagram
  __new_health_events {
    text id PK
    text service_id FK "→ services.id"
    text monitor_id FK "→ monitors.id"
    text event_type "not null"
    integer started_at "not null"
    integer ended_at
    integer duration_seconds
  }
  api_credentials {
    text id PK
    text service_id FK "→ services.id"
    text token_hash "not null"
    text token_prefix "not null"
    integer last_used_at
    integer revoked_at
    integer created_at "not null"
  }
  audit_logs {
    text id PK
    text actor_user_id FK "→ users.id"
    text action "not null"
    text target_type
    text target_id
    text metadata
    text ip
    integer created_at "not null"
  }
  backups {
    text id PK
    text service_id FK "→ services.id"
    text user_id FK "→ users.id"
    text destination_id FK "→ destinations.id"
    text destination_name
    text filename "not null"
    integer size_bytes "not null"
    text status "not null"
    text error_code
    text error_message
    text idempotency_key
    integer created_at "not null"
    integer completed_at
  }
  destinations {
    text id PK
    text user_id FK "→ users.id"
    text name "not null"
    text type "not null"
    integer telegram_chat_id "not null"
    integer telegram_thread_id
    integer verified "not null"
    integer verified_at
    integer created_at "not null"
    integer updated_at "not null"
  }
  health_events {
    text id PK
    text service_id FK "→ services.id"
    text event_type "not null"
    integer started_at "not null"
    integer ended_at
    integer duration_seconds
  }
  monitors {
    text id PK
    text service_id FK "→ services.id"
    text key "not null"
    text name "not null"
    integer enabled "not null"
    integer notify "not null"
    text status "not null"
    integer interval_seconds "not null"
    integer grace_seconds "not null"
    integer last_heartbeat_at
    integer went_down_at
    integer last_recovered_at
    integer total_downtime_seconds "not null"
    integer down_count "not null"
    integer created_at "not null"
    integer updated_at "not null"
  }
  services {
    text id PK
    text user_id FK "→ users.id"
    text name "not null"
    text description
    text status "not null"
    integer api_enabled "not null"
    text destination_id FK "→ destinations.id"
    integer health_enabled "not null"
    integer health_notify "not null"
    text health_status "not null"
    integer health_interval_seconds "not null"
    integer health_grace_seconds "not null"
    integer last_heartbeat_at
    integer went_down_at
    integer last_recovered_at
    integer total_downtime_seconds "not null"
    integer down_count "not null"
    integer last_backup_at
    integer backup_count "not null"
    integer max_backup_size_mb
    text api_rate_limit
    text backup_rate_limit
    text heartbeat_rate_limit
    integer created_at "not null"
    integer updated_at "not null"
  }
  settings {
    text key PK
    text value "not null"
    integer updated_at "not null"
  }
  users {
    text id PK
    integer telegram_id "not null"
    text username
    text first_name
    text last_name
    text role "not null"
    integer blocked "not null"
    text blocked_reason
    integer notify_health "not null"
    integer notify_backup_failures "not null"
    integer max_services
    integer max_backup_size_mb
    text api_rate_limit
    text backup_rate_limit
    integer last_seen_at
    integer created_at "not null"
    integer updated_at "not null"
  }
  __new_health_events }o--|| monitors : "monitor_id"
  __new_health_events }o--|| services : "service_id"
  api_credentials }o--|| services : "service_id"
  audit_logs }o--|| users : "actor_user_id"
  backups }o--|| destinations : "destination_id"
  backups }o--|| services : "service_id"
  backups }o--|| users : "user_id"
  destinations }o--|| users : "user_id"
  health_events }o--|| services : "service_id"
  monitors }o--|| services : "service_id"
  services }o--|| destinations : "destination_id"
  services }o--|| users : "user_id"
